Fix banner image stretching

--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ label {
     top: 0%;
     width: 24%;
     max-height:142px;
+    max-width:260px;
     height: auto;
 }
 
